--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -39,8 +39,13 @@
     </nav>
     <div class="container" style="position: relative; padding: 0 !important;">
     
-        <h1>Xuất linh kiện thành phẩm <span style="font-size: 15px; float: right; margin-top: 15px;">Ngày thực nhập : <span id="datetime"></span></span></h1>
-        <p class="clearfix" style="font-size: 15px; right: 0; margin-top: 5px;position: absolute;">Phiếu nhập số : <span id="stthopdong"></span></p>
+        <div style="display: flex; margin-top: 50px;">
+            <h1>Nhập linh kiện thành phẩm</h1> 
+            <div style="margin-right: 0; margin-left: auto;"> 
+                <span style="float: right; margin-right: 0; margin-left: auto; font-size: 15px; margin-top: 15px;">Ngày thực nhập: <span id="datetime"></span></span>
+                <p class="clearfix" style="font-size: 15px; margin-right: 0; margin-left: auto; margin-top: 5px;">Phiếu nhập số: <span id="stthopdong"></span></p>
+            </div>
+        </div>
         <form style="margin-top: 15px;" id="save" action="" class="form-group">
             <div class="row">                
                 <div class="col-6">
