--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -19,6 +19,7 @@
     <title>Data Manager</title>
 
     
+
 </head>
 <body>
 
@@ -39,7 +40,7 @@
         </div>
 
     </nav>
-    <div class="container" style="position: relative; padding: 0 !important;">
+    <div class="container container-custom" style="position: relative; padding: 0 !important;">
     
         <div style="display: flex; margin-top: 50px;">
             <h1>Nhập linh kiện thành phẩm</h1> 
