--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -37,7 +37,7 @@
         </div>
 
     </nav>
-    <div class="container" style="position: relative; padding: 0 !important;">
+    <div class="container container-custom" style="position: relative; padding: 0 !important;">
     
         <div style="display: flex; margin-top: 50px;">
             <h1>Nhập linh kiện thành phẩm</h1> 
