--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                 
                 <div class="col-4">
                     <div style="background-color: #A77222; border-radius: 2%; width: 250px; height: 250px; flex-direction: column; display: flex; margin-left: auto; margin-right: auto;">
-                        <h1 style="text-align: center; color: white; margin-top: 20px;">Chào</h1>
+                        <h1 style="text-align: center; color: white; margin-top: 20px;">Nhập</h1>
                         <a href="nhap/lknhap.html" style="margin-left: 25px; color: white; font-size: 20px; margin-top: 60px;">Linh kiện điện tử</a>
                         <a href="nhap/tpnhap.html" style="margin-left: 25px; color: white; font-size: 20px; margin-top: 25px;">Thành phẩm</a>
                     </div>
