--- a/src/xuat/tpxuat.html
+++ b/src/xuat/tpxuat.html
@@ -124,7 +124,7 @@
             document.getElementById('datetime').innerHTML = doc.submissionDate;
 
             const form = $('form');
-            form.attr("id", 'edit');
+            form.attr("id", 'edit').hide();
             $('form').append(`
                 <input type="hidden" id="_id" value="${doc.id}">
             `)
