--- a/src/nhap/tpnhap.html
+++ b/src/nhap/tpnhap.html
@@ -79,12 +79,21 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="../scripts/keywordsThanhpham.js"></script>
+    <script src="../scripts/autoComplete.js"></script>
     <script src="https://unpkg.com/canvas-datagrid"></script>
     <script src="../scripts/printExcel.js"></script>
     <script src="../scripts/reviews.js"></script>
     <script>
         const {ipcRenderer} = require('electron'); //Now it's able to send events between backend and frontend 
+
+        // Auto Complete
+        const trigger = () => {
+            SuggestKeywordsSpecial('tenhang');
+            SuggestKeywords('chip');
+            SuggestKeywords('mcu');
+            SuggestKeywords('sohopdong');
+        }
+        
 
         // Print reviews when first enter the page
         printReviews('nhapThanhpham');
