--- a/src/addExcel/removeKeyword.html
+++ b/src/addExcel/removeKeyword.html
@@ -136,7 +136,7 @@
     <!-- Insert this line above script imports  -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 
-    <script src="../scripts/keywordsInputs.js"></script>
+    <script src="../scripts/autoComplete.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -147,6 +147,16 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script>
+        // Auto Complete
+        const trigger = () => {
+            SuggestKeywords('partnum', true);
+            SuggestKeywords('tenhang', true); 
+            SuggestKeywords('sohopdong', true);
+            SuggestKeywords('cty', true);
+            SuggestKeywords('dvtinh', true);
+        }
+        
+
         const remove = async (aspect) => {
             if (aspect == 'tenhang' || aspect == 'partnum') {
                 const arr = await Keywords.findPairKeywords(document.getElementById(aspect).value);
