--- a/src/kx/lkkx.html
+++ b/src/kx/lkkx.html
@@ -77,7 +77,7 @@
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/canvas-datagrid"></script>
-    <script src="../scripts/keywordsInputs.js"></script>
+    <script src="../scripts/autoComplete.js"></script>
     <script src="../scripts/printExcel.js"></script>
     <script>
         var select = document.getElementById('type')
@@ -135,6 +135,13 @@
             }
         }
 
+        //Auto Complete
+        const trigger = () => {
+            SuggestKeywords('nameinp');
+            SuggestKeywords('shdinp');
+        }
+        
+        
         //include electron package
         const {ipcRenderer} = require('electron');
         var nhaps, xuats, tons;
