--- a/src/xuat/tpxuat.html
+++ b/src/xuat/tpxuat.html
@@ -79,7 +79,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="../scripts/keywordsThanhpham.js"></script>
+    <script src="../scripts/autoComplete.js"></script>
     <script src="https://unpkg.com/canvas-datagrid"></script>
     <script src="../scripts/printExcel.js"></script>
     <script src="../scripts/reviews.js"></script>
@@ -87,6 +87,15 @@
         const {ipcRenderer} = require('electron'); //Now it's able to send events between backend and frontend 
         // Print recent submissions when first enter the page
         printReviews('xuatThanhpham');
+
+        // Auto Complete
+        const trigger = () => {
+            SuggestKeywordsSpecial('tenhang');
+            SuggestKeywords('chip');
+            SuggestKeywords('mcu');
+            SuggestKeywords('sohopdong');
+        }
+        
 
         // Update the date today
         var dt = new Date();
