--- a/src/chinhsua/cslk.html
+++ b/src/chinhsua/cslk.html
@@ -138,6 +138,7 @@
                 document.getElementById('nameinp').style.display = 'none'
                 document.querySelector('.lbl-date').style.display ='none'
                 document.getElementById('shdinp').style.display ='none'
+                document.getElementById('hmm').innerHTML = ''
 
                 processAll();
             }
