--- a/src/chinhsua/cslk.html
+++ b/src/chinhsua/cslk.html
@@ -146,6 +146,7 @@
                 document.querySelector('.lbl-date').style.display ='none'
                 document.getElementById('shdinp').style.display ='none'
 
+                document.getElementById('hmm').innerHTML = ''
                 processAll();
             }
         }
