--- a/src/chinhsua/cslk.html
+++ b/src/chinhsua/cslk.html
@@ -84,11 +84,12 @@
 
     <!-- Insert this line above script imports  -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-
+    <script src="../scripts/checkInternetStatus.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="../scripts/autoComplete.js"></script>
+    
     <script>
         var select = document.getElementById('type');
 
