--- a/src/addExcel/removeKeyword.html
+++ b/src/addExcel/removeKeyword.html
@@ -71,6 +71,25 @@
                 </div>
             </div>
         </div>
+
+        <h2 style="margin: 15px 0;">Sản phẩm</h2>
+        <div class="row" style="border-bottom: 1px solid black; padding-bottom: 10px;">
+            <div class="col-6 form-group" style="margin-top: 5px;">
+                <form action="" class="form-inline">
+                    <label for="">Tìm keyword</label>
+                    <input id="tenhang" style="margin-top: 15px; margin-left: 15px;" type="text" class="form-control">
+                </form>
+                
+            </div>
+            <div class="col-6 form-group" style="margin-top: 5px;">
+                <div style="display: flex; justify-content: flex-end;">
+                    <p class="" id="tenhangResult" style="font-size: 20px; margin-top: 15px; margin-right: 15px;">Keyword 2</p>
+                    <div class="">
+                        <button onclick="remove('tenhang')" style="padding: 10px 15px; margin-top: 10px;">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <h2 style="margin: 15px 0;">Số hợp đồng</h2>
         <div class="row" style="border-bottom: 1px solid black; padding-bottom: 10px;">
             <div class="col-6 form-group" style="margin-top: 5px;">
