--- a/src/xuat/tpxuat.html
+++ b/src/xuat/tpxuat.html
@@ -65,7 +65,7 @@
 
         <div class="row" id="buttonContainer" style="margin: 30px 0;">
             <input onclick="submit()" type="submit" value="Thêm" class="col-4 form-control" style="line-height: 25px; font-size: 25px; background-color: green; color:white;">
-            <input onclick="addReview('xuatThanhpham'); printReviews('xuatThanhpham'); addKeyword('thanhpham');" type="submit" value="Đợi" class="col-4 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
+            <input onclick="preSave()" type="submit" value="Đợi" class="col-4 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
             <button class="col-4 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
         </div>
 
@@ -83,9 +83,12 @@
     <script src="../scripts/autoComplete.js"></script>
     <script src="https://unpkg.com/canvas-datagrid"></script>
     <script src="../scripts/printExcel.js"></script>
-    <script src="../scripts/reviews.js"></script>
+    <script src="../scripts/localStorage.js"></script>
     
     <script>
+        //Show last submission
+        displayLastSubmission('xuatThanhpham');
+
         const {ipcRenderer} = require('electron'); //Now it's able to send events between backend and frontend 
         // Print recent submissions when first enter the page
         printReviews('xuatThanhpham');
@@ -128,6 +131,15 @@
                 state: 'xuat'
             }
             return obj;
+        }
+
+        // Pre save (adding to grid) processes
+        function preSave() {
+            var obj = prepareObj();
+            addReview('xuatThanhpham', obj); 
+            printReviews('xuatThanhpham'); 
+            saveLastSubmission('xuatThanhpham', obj);
+            addKeyword('thanhpham', obj);
         }
 
         // Edit document also ////////////////////
