--- a/src/kx/lkkx.html
+++ b/src/kx/lkkx.html
@@ -150,11 +150,11 @@
 
             tons.forEach(doc => {
                 var block = $('<div style="border: 1px solid black; padding-left: 15px; padding-top: 15px;"></div>')
-                var tenhang = $('<p></p>').html('Tên hàng: ' + doc.tenhang);
+                var partnum = $('<p></p>').html('Part number: ' + doc.partnum);
                 var dvtinh = $('<p></p>').html('Đơn vị tính: ' + doc.dvtinh);
                 var quantity = $('<p></p>').html('Số lượng: ' + doc.quantity);
 
-                block.append(tenhang, dvtinh, quantity);
+                block.append(partnum, dvtinh, quantity);
                 box.append(block);
             });
         }
