--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -89,7 +89,7 @@
         </form>
 
         <div class="row" id="buttonContainer" style="margin: 30px 0;">
-            <input onclick="addReview('xuatLinhkien'); printReviews('xuatLinhkien'); addKeyword('linhkien');" type="submit" value="Nhập" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
+            <input onclick="preSave()" type="submit" value="Nhập" class="col-6 form-control" style="line-height: 25px; font-size: 25px; background-color: blue; color:white;">
             <button class="col-6 form-control" onclick="location.href='../index.html'" style="line-height: 25px; font-size: 25px; background-color: red; color:white;">Hủy</button>
         </div>
 
@@ -113,9 +113,12 @@
     <script src="../scripts/autoComplete.js"></script>
     <script src="https://unpkg.com/canvas-datagrid"></script>
     <script src="../scripts/printExcel.js"></script>
-    <script src="../scripts/reviews.js"></script>
+    <script src="../scripts/localStorage.js"></script>
     
     <script>
+        //Show last submission
+        displayLastSubmission('xuatLinhkien');
+
         var dt = new Date();
         document.getElementById("datetime").innerHTML = (("0"+dt.getDate()).slice(-2)) +"/"+ (("0"+(dt.getMonth()+1)).slice(-2)) +"/"+ (dt.getFullYear());
 
@@ -201,6 +204,19 @@
             return obj;
         }
 
+        // Pre save (adding to grid) processes
+        function preSave() {
+            var obj = prepareObj();
+            addReview('xuatLinhkien', obj); 
+            printReviews('xuatLinhkien'); 
+            saveLastSubmission('xuatLinhkien', obj);
+            addKeyword('linhkien', obj);
+
+            //Update stthopdong
+            const stthopdong = parseInt(document.getElementById('stthopdong').innerHTML, 10);
+            ipcRenderer.send('updateSubmissionCount', stthopdong + 1);
+        }
+
         // Edit document also ////////////////////
         ipcRenderer.on('edit-receive', (event, doc) => {
             const form = $('form');
@@ -237,17 +253,13 @@
             const form = document.querySelector('form');
             if (form.id == "save") {
                 //Submit all previous reviews
-                var index = 0, stthopdong = parseInt(document.getElementById('stthopdong').innerHTML, 10);
+                var index = 0;
                 while (index < reviews['xuatLinhkien'].length) { //Inside the array
-                    reviews['xuatLinhkien'][index]['stthopdong'] = stthopdong; //avoid having same stthopdong
                     var canSubmit = ipcRenderer.sendSync('xuat-linhkien', reviews['xuatLinhkien'][index]);
                     if (canSubmit) { 
                         removeReview('xuatLinhkien', index);
-                        stthopdong++; //One more contract is done
                     } else index++; //Skip element
                 }
-
-                document.getElementById('stthopdong').innerHTML = stthopdong; //Display updated stthopdong
                 printReviews('xuatLinhkien'); //Update grid
             } 
             if (form.id == "edit") {
