--- a/src/xuat/lkxuat.html
+++ b/src/xuat/lkxuat.html
@@ -166,7 +166,7 @@
         formChange.addEventListener('change', (e) => {
             thanhtien = document.getElementById('dongia').value *document.getElementById('quantity').value 
             // document.getElementById('thanhtien').placeholder = document.getElementById('dongia').value *document.getElementById('quantity').value
-            document.getElementById('thanhtien').placeholder = thanhtien.toFixed(4);
+            document.getElementById('thanhtien').value = thanhtien.toFixed(4);
         })
 
         function prepareObj() {
