--- a/src/nhap/lknhap.html
+++ b/src/nhap/lknhap.html
@@ -239,7 +239,7 @@
                 <input type="hidden" id="_id" value="${doc.id}">
             `)
 
-            displayLinhkien([doc]); //Display document via grid
+            displayLinhkien([doc], true); //Display document via grid
 
 
             $('#h1-edit').text("Chỉnh sửa nhập linh kiện điện tử")
